crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_single_specific_free_groups-5.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: invalid_target
expression: out
---
  × expected a target matching "Crazy", got "Hydroxyl" at="Nonreducing End"
  │ of="N-Acetylmuramic Acid"
