crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__find_single_unambiguous_free_groups.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: zero_groups
expression: out
---
  × attemped to find zero free groups, but you must look for at least one
