crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: no_matching_groups
expression: out
---
  × failed to apply the modification Amidation (Am) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × no functional groups on residue 1 matched the target "Carboxyl"
        │ at="Sidechain"
