crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_group-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: invalid_group
expression: out
---
  × failed to apply the modification O-Acetylation (Ac) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × expected a target matching "Hydroxyl" at="6-Position", got
      "Hydroxyl"
        │ at="Reducing End" of="N-Acetylmuramic Acid"
