crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_group-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: nonexistent_group
expression: out
---
  × failed to apply the modification Reduced (Red) to residue 1 (Alanine)
  ╰─▶   × the functional group "Hydroxyl" at="Reducing End" does not exist on
        │ residue 1
