crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_group.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: modify_non_free_group
expression: out
---
  × failed to apply the modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × the functional group "Hydroxyl" at="Reducing End" of residue 1 was
      already
        │ modified, but must be free
