crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_groups-3.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: modify_multiple_errors
expression: out
---
  × failed to apply the modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × failed to find multiple of the requested free groups
      
      Error:
        × the functional group "Hydroxyl" at="Reducing End" of residue 1 was
        │ already modified, but must be free
      
      Error:
        × expected a target matching "Hydroxyl" at="Reducing End" of="N-
        │ Acetylmuramic Acid", got "Hydroxyl" at="6-Position" of="N-
        │ Acetylmuramic Acid"
