crates/polychem/src/polymerizer/snapshots/polychem__polymerizer__tests__modify_groups-4.snap
---
source: crates/polychem/src/polymerizer/mod.rs
description: residue_from_wrong_polymer
expression: out
---
  × failed to apply the named modification 1,6-Anhydro (Anh) to residue 1 (N-
  │ Acetylmuramic Acid)
  ╰─▶   × failed to find multiple of the requested free groups
      
      Error:
        × expected a target matching "Hydroxyl" at="Reducing End" of="N-
        │ Acetylmuramic Acid", got "Hydroxyl" at="6-Position" of="N-
        │ Acetylmuramic Acid"
      
      Error:
        × residue 1 does not belong to the current polymer
        help: the referenced residue was likely created by a different
              Polymerizer instance
